cgroup/cpuset: Introduce CPUSet Assist
Based on 80dd8b4 ("sched/tune: Introduce SchedTune Assist")

This implements a mechanism by which default cpusets can be
configured in-kernel, circumventing userspace, and mitigating
reliance on ramdisk modification in the context of custom kernels.

Signed-off-by: Yaroslav Furman <yaro330@gmail.com>
[@0ctobot: Adapted for msm-4.9]
Signed-off-by: Adam W. Willis <return.of.octobot@gmail.com>
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>
Change-Id: I482ae0aa596ce38c97404e6018bed3634b8ffe84

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1523,6 +1523,16 @@ config SCHED_TUNE
 
 	  If unsure, say N.
 
+config CPUSET_ASSIST
+	bool "CPUSet configuration helper"
+	depends on CPUSETS
+	depends on ANDROID
+	help
+	  This option enables the configuration of default cpusets
+	  parameters from kernel.
+
+	  If unsure, say N.
+
 config DEFAULT_USE_ENERGY_AWARE
 	bool "Default to enabling the Energy Aware Scheduler feature"
 	default n
