cpuset: Refactor cpuset assist code
 - Fix invalid memory manipulation and potential buffer undersizing
 - Improve overall code style
 - Revise Kconfig description

Signed-off-by: Danny Lin <danny@kdrag0n.dev>
Signed-off-by: Adam W. Willis <return.of.octobot@gmail.com>
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>
Change-Id: Ia863797c578533463b9eec710e5430a36fc3957b

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1524,7 +1524,7 @@ config SCHED_TUNE
 	  If unsure, say N.
 
 config CPUSET_ASSIST
-	bool "CPUSet configuration helper"
+	bool "Cpuset configuration helper"
 	depends on CPUSETS
 	depends on ANDROID
 	help
