qcacld-3.0: enable CONFIG_ENABLE_SIZE_OPTIMIZE
This reduces the size of final kernel image by 350kb.

Signed-off-by: Yaroslav Furman <yaro330@gmail.com>
Change-Id: Iea551f7c2b4bde0a768c57255ed4604eae007810
Signed-off-by: sajidshahriar72543 <sazidshahriar39@gmail.com>

--- a/drivers/staging/qcacld-3.0/configs/default_defconfig
+++ b/drivers/staging/qcacld-3.0/configs/default_defconfig
@@ -693,3 +693,6 @@ CONFIG_DEBUG_RX_RING_BUFFER := y
 CONFIG_RX_HASH_DEBUG := y
 
 CONFIG_WLAN_HANG_EVENT := y
+
+#Enable optimize size
+CONFIG_ENABLE_SIZE_OPTIMIZE := y
