ARM64: dts: define doze lpm and hbm backlight levels
Change-Id: I8b3c093df73da94e96d34be4366cad364d33de2a

--- a/arch/arm64/boot/dts/qcom/dsi-panel-ss-notch-fhd-ea8074-cmd.dtsi
+++ b/arch/arm64/boot/dts/qcom/dsi-panel-ss-notch-fhd-ea8074-cmd.dtsi
@@ -57,6 +57,8 @@
 		qcom,mdss-dsi-panel-peak-brightness = <4300000>;
 		qcom,mdss-dsi-panel-blackness-level = <3230>;
 		qcom,dispparam-enabled;
+		qcom,disp-doze-lbm-backlight = <10>;
+		qcom,disp-doze-hbm-backlight = <133>;
 		qcom,mdss-panel-on-dimming-delay = <200>;
 		qcom,mdss-dsi-panel-dc-threshold = <320>;
 		qcom,mdss-dsi-display-timings {
