--- a/arch/arm64/boot/dts/qcom/beryllium-p0.dtsi
+++ b/arch/arm64/boot/dts/qcom/beryllium-p0.dtsi
@@ -592,7 +592,7 @@
 	};
 
 	chan@4d {
-		label = "cam_therm0";
+		label = "sdm_therm";
 		reg = <0x4d>;
 		qcom,decimation = <2>;
 		qcom,pre-div-channel-scaling = <0>;
@@ -603,7 +603,7 @@
 	};
 
 	chan@4e {
-		label = "cam_therm1";
+		label = "quiet_therm";
 		reg = <0x4e>;
 		qcom,decimation = <2>;
 		qcom,pre-div-channel-scaling = <0>;
@@ -614,7 +614,7 @@
 	};
 
 	chan@4f {
-		label = "pa_therm0";
+		label = "fps_therm";
 		reg = <0x4f>;
 		qcom,decimation = <2>;
 		qcom,pre-div-channel-scaling = <0>;
@@ -625,7 +625,7 @@
 	};
 
 	chan@50 {
-		label = "pa_therm1";
+		label = "pa_therm";
 		reg = <0x50>;
 		qcom,decimation = <2>;
 		qcom,pre-div-channel-scaling = <0>;
@@ -636,22 +636,11 @@
 	};
 
 	chan@51 {
-		label = "quiet_therm";
+		label = "pmi_therm";
 		reg = <0x51>;
 		qcom,decimation = <2>;
 		qcom,pre-div-channel-scaling = <0>;
 		qcom,calibration-type = "ratiometric";
-		qcom,scale-function = <2>;
-		qcom,hw-settle-time = <2>;
-		qcom,fast-avg-setup = <0>;
-	};
-
-	chan@52 {
-		label = "backlight_therm";
-		reg = <0x52>;
-		qcom,decimation = <2>;
-		qcom,pre-div-channel-scaling = <0>;
-		qcom,calibration-type = "absolute";
 		qcom,scale-function = <2>;
 		qcom,hw-settle-time = <2>;
 		qcom,fast-avg-setup = <0>;
@@ -681,19 +670,8 @@
 	};
 
 	chan@4d {
-		label = "cam_therm0";
+		label = "sdm_therm";
 		reg = <0x4d>;
-		qcom,pre-div-channel-scaling = <0>;
-		qcom,calibration-type = "ratiometric";
-		qcom,scale-function = <2>;
-		qcom,hw-settle-time = <2>;
-		qcom,btm-channel-number = <0x88>;
-		qcom,thermal-node;
-	};
-
-	chan@4e {
-		label = "cam_therm1";
-		reg = <0x4e>;
 		qcom,pre-div-channel-scaling = <0>;
 		qcom,calibration-type = "ratiometric";
 		qcom,scale-function = <2>;
@@ -702,9 +680,9 @@
 		qcom,thermal-node;
 	};
 
-	chan@4f {
-		label = "pa_therm0";
-		reg = <0x4f>;
+	chan@4e {
+		label = "quiet_therm";
+		reg = <0x4e>;
 		qcom,pre-div-channel-scaling = <0>;
 		qcom,calibration-type = "ratiometric";
 		qcom,scale-function = <2>;
@@ -713,8 +691,19 @@
 		qcom,thermal-node;
 	};
 
+	chan@4f {
+		label = "fps_therm";
+		reg = <0x4f>;
+		qcom,pre-div-channel-scaling = <0>;
+		qcom,calibration-type = "ratiometric";
+		qcom,scale-function = <2>;
+		qcom,hw-settle-time = <2>;
+		qcom,btm-channel-number = <0x98>;
+		qcom,thermal-node;
+	};
+
 	chan@50 {
-		label = "pa_therm1";
+		label = "pa_therm";
 		reg = <0x50>;
 		qcom,pre-div-channel-scaling = <0>;
 		qcom,calibration-type = "ratiometric";
@@ -725,24 +714,13 @@
 	};
 
 	chan@51 {
-		label = "quiet_therm";
+		label = "pmi_therm";
 		reg = <0x51>;
 		qcom,pre-div-channel-scaling = <0>;
 		qcom,calibration-type = "ratiometric";
 		qcom,scale-function = <2>;
 		qcom,hw-settle-time = <2>;
-		qcom,btm-channel-number = <0x80>;
-		qcom,thermal-node;
-	};
-
-	chan@52 {
-		label = "backlight_therm";
-		reg = <0x52>;
-		qcom,pre-div-channel-scaling = <0>;
-		qcom,calibration-type = "absolute";
-		qcom,scale-function = <2>;
-		qcom,hw-settle-time = <2>;
-		qcom,btm-channel-number = <0x98>;
+		qcom,btm-channel-number = <0x88>;
 		qcom,thermal-node;
 	};
 };
@@ -763,27 +741,33 @@
 		};
 	};
 
-	cam_therm0 {
+
+	sdm-therm-adc {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-sensors = <&pm8998_adc_tm 0x4d>;
 		thermal-governor = "user_space";
+		wake-capable-sensor;
 
 		trips {
 			active-config0 {
-					temperature = <65000>;
-					hysteresis = <1000>;
-					type = "passive";
+				temperature = <125000>;
+				hysteresis = <1000>;
+				type = "passive";
 			};
 		};
 	};
 
-	cam_therm1 {
+	quiet-therm-adc {
+
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-sensors = <&pm8998_adc_tm 0x4e>;
 		thermal-governor = "user_space";
 
+		wake-capable-sensor;
+		disable-thermal-zone;
+
 		trips {
 			active-config0 {
 					temperature = <65000>;
@@ -793,7 +777,80 @@
 		};
 	};
 
-	pa_therm0 {
+	backup-charge {
+		polling-delay-passive = <0>;
+		polling-delay = <0>;
+		thermal-sensors = <&pm8998_adc_tm 0x4f>;
+		thermal-governor = "step_wise";
+		wake-capable-sensor;
+		disable-thermal-zone;
+
+		trips {
+			batt_charging_lv1: batt-charging_lv1 {
+				temperature = <39000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+			batt_charging_lv2: batt-charging_lv2 {
+				temperature = <41000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+			batt_charging_lv3: batt-charging_lv3 {
+				temperature = <43000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+			batt_charging_lv4: batt-charging_lv4 {
+				temperature = <48000>;
+				hysteresis = <1000>;
+				type = "passive";
+			};
+		};
+		cooling-maps {
+			charging_cdev_lv1 {
+				trip = <&batt_charging_lv1>;
+				cooling-device = <&pmi8998_charger 1 1>;
+			};
+			charging_cdev_lv2 {
+				trip = <&batt_charging_lv2>;
+				cooling-device = <&pmi8998_charger 2 2>;
+			};
+			charging_cdev_lv3 {
+				trip = <&batt_charging_lv3>;
+				cooling-device = <&pmi8998_charger 3 3>;
+			};
+			charging_cdev_lv4 {
+				trip = <&batt_charging_lv4>;
+				cooling-device = <&pmi8998_charger 4 4>;
+			};
+		};
+	};
+
+	fps-therm-adc {
+		polling-delay-passive = <0>;
+		polling-delay = <0>;
+		thermal-sensors = <&pm8998_adc_tm 0x4f>;
+		thermal-governor = "user_space";
+
+		wake-capable-sensor;
+		disable-thermal-zone;
+
+		trips {
+			active-config0 {
+					temperature = <65000>;
+					hysteresis = <1000>;
+					type = "passive";
+			};
+			shutdown-config {
+				temperature = <59000>;
+				hysteresis = <1000>;
+				type = "critical";
+			};
+		};
+	};
+
+	fps-therm-monitor {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
 		thermal-sensors = <&pm8998_adc_tm 0x4f>;
@@ -808,10 +865,10 @@
 		};
 	};
 
-	pa_therm1 {
+	pmi_therm-adc {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-sensors = <&pm8998_adc_tm 0x50>;
+		thermal-sensors = <&pm8998_adc_tm 0x51>;
 		thermal-governor = "user_space";
 
 		trips {
@@ -823,10 +880,10 @@
 		};
 	};
 
-	quiet_therm {
+	pa-therm-adc {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-sensors = <&pm8998_adc_tm 0x51>;
+		thermal-sensors = <&pm8998_adc_tm 0x50>;
 		thermal-governor = "user_space";
 
 		trips {
@@ -838,10 +895,10 @@
 		};
 	};
 
-	backlight_therm {
+	usbc-therm-monitor {
 		polling-delay-passive = <0>;
 		polling-delay = <0>;
-		thermal-sensors = <&pm8998_adc_tm 0x52>;
+		thermal-sensors = <&pm8998_adc_tm 0x4f>;
 		thermal-governor = "user_space";
 
 		trips {
