arch/arm64: configs: configure cpumasks
SDM845:
big.LITTLE (4-4):
isLITTLE: 00001111 = 15
isbig: 11110000 = 240

Signed-off-by: CloudedQuartz <ravenklawasd@gmail.com>

--- a/arch/arm64/configs/beryllium_defconfig
+++ b/arch/arm64/configs/beryllium_defconfig
@@ -57,6 +57,13 @@ CONFIG_PCI=y
 CONFIG_PCI_MSM=y
 CONFIG_SCHED_MC=y
 CONFIG_NR_CPUS=8
+CONFIG_LITTLE_CPU_MASK=15
+CONFIG_BIG_CPU_MASK=240
+CONFIG_HOTPLUG_CPU=y
+CONFIG_ARCH_NR_GPIO=1280
+# CONFIG_NUMA is not set
+# CONFIG_PREEMPT_NONE is not set
+# CONFIG_PREEMPT_VOLUNTARY is not set
 CONFIG_PREEMPT=y
 # CONFIG_HZ_100 is not set
 # CONFIG_HZ_250 is not set
