arch/arm64: defconfigs: enable kernelspace battery saver mode

--- a/arch/arm64/configs/beryllium_defconfig
+++ b/arch/arm64/configs/beryllium_defconfig
@@ -658,3 +658,14 @@ CONFIG_WCD9XXX_CODEC_CORE=y
 CONFIG_WCD_DSP_GLINK=y
 CONFIG_WCD_SPI_AC=y
 CONFIG_MACH_XIAOMI_E10=y
+
+
+CONFIG_KLAPSE=y
+CONFIG_OPTIMIZE_INLINING=y
+CONFIG_CRYPTO_DEFLATE=y
+CONFIG_CRYPTO_LZO=y
+# CONFIG_CRYPTO_842 is not set
+CONFIG_CRYPTO_LZ4=y
+# CONFIG_CRYPTO_LZ4HC is not set
+CONFIG_BATTERY_SAVER=y
+
