--- a/arch/arm64/configs/dipper_defconfig
+++ b/arch/arm64/configs/dipper_defconfig
@@ -671,3 +671,24 @@ CONFIG_WCD9XXX_CODEC_CORE=y
 CONFIG_WCD_DSP_GLINK=y
 CONFIG_WCD_SPI_AC=y
 CONFIG_MACH_XIAOMI_E1N=y
+
+
+
+CONFIG_KLAPSE=y
+
+# CONFIG_LTO_NONE is not set
+CONFIG_LTO_CLANG=y
+CONFIG_THINLTO=y
+CONFIG_LD_LLD=y
+# CONFIG_DEBUG_KERNEL is not set
+# CONFIG_DEBUG_FS is not set
+# CONFIG_KALLSYMS is not set
+
+CONFIG_OPTIMIZE_INLINING=y
+CONFIG_CRYPTO_DEFLATE=y
+CONFIG_CRYPTO_LZO=y
+# CONFIG_CRYPTO_842 is not set
+CONFIG_CRYPTO_LZ4=y
+# CONFIG_CRYPTO_LZ4HC is not set
+CONFIG_BATTERY_SAVER=y
+
