kernel: Introduce Uclamp Assist
Unfortunately, I still haven't found a good way to make the kernel
initialize the tunable values of uclamp in cgroups.

Another way, we can adjust the tunable values of uclamp in Cpusets Assist,
because almost every Rom will write cpusets values when device boot.

Reference values from https://github.com/darkhz/uclamp/commit/586d1574db3dbfdbd39e2451ec2fdc8737c954e3

[KyuoFoxHuyu: Change "depends on CPUSETS_ASSIST" to "depends on CPUSET_ASSIST". Modified from a08f5d9901c6ea8523b355e1a47edbc90c83ac50]

Signed-off-by: Pzqqt <821026875@qq.com>
Signed-off-by: KyuoFoxHuyu <88403766@qq.com>
Change-Id: Ie077cfee0973c803d4bbba64e5e76483fb6070cf
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>

--- a/init/Kconfig
+++ b/init/Kconfig
@@ -1522,7 +1522,18 @@ config SCHED_TUNE
 	  boost value is applied to all (CFS) tasks in the system.
 
 	  If unsure, say N.
+	  
+config UCLAMP_ASSIST
+	bool "Uclamp configuration helper"
+	depends on CPUSETS
+	depends on ANDROID
+	depends on UCLAMP_TASK_GROUP
+	depends on CPUSET_ASSIST
+	help
+	  This option enables in-kernel overrides for uclamp values.
 
+	  If unsure, say N.
+	  
 config CPUSET_ASSIST
 	bool "Cpuset configuration helper"
 	depends on CPUSETS
