arm64/configs: Regenerate beryllium defconfig
* Introduce Uclamp Assist
* Introduce Cpuset Assist

Change-Id: I8859e7d58ae5a889eddfcf9e52afe26ddd8c98ed
Signed-off-by: PainKiller3 <ninadpatil100@gmail.com>

--- a/arch/arm64/configs/beryllium_defconfig
+++ b/arch/arm64/configs/beryllium_defconfig
@@ -44,7 +44,15 @@ CONFIG_NAMESPACES=y
 # CONFIG_UTS_NS is not set
 # CONFIG_PID_NS is not set
 CONFIG_SCHED_AUTOGROUP=y
-# CONFIG_SCHED_TUNE is not set
+CONFIG_UCLAMP_ASSIST=y
+CONFIG_CPUSET_ASSIST=y
+CONFIG_CPUSET_AUDIO_APP="0-3"
+CONFIG_CPUSET_BG="0-1"
+CONFIG_CPUSET_CAMERA="0-3,6-7"
+CONFIG_CPUSET_FG="0-3,6-7"
+CONFIG_CPUSET_RESTRICTED="0-3"
+CONFIG_CPUSET_SYSTEM_BG="0-3"
+CONFIG_CPUSET_TOP_APP="0-7"
 CONFIG_DEFAULT_USE_ENERGY_AWARE=y
 CONFIG_BLK_DEV_INITRD=y
 # CONFIG_RD_XZ is not set
