arch/arm64: beryllium_defconfig: specify kernel version

--- a/arch/arm64/configs/beryllium_defconfig
+++ b/arch/arm64/configs/beryllium_defconfig
@@ -1,4 +1,4 @@
-CONFIG_LOCALVERSION="-XD"
+CONFIG_LOCALVERSION="-XD_Kernel_v1.0"
 # CONFIG_FHANDLE is not set
 CONFIG_AUDIT=y
 # CONFIG_AUDITSYSCALL is not set
