--- a/arch/arm64/configs/malakas_beryllium_defconfig
+++ b/arch/arm64/configs/malakas_beryllium_defconfig
@@ -1,6 +1,6 @@
 #
 # Automatically generated file; DO NOT EDIT.
-# Linux/arm64 4.9.261 Kernel Configuration
+# Linux/arm64 4.9.276 Kernel Configuration
 #
 CONFIG_ARM64=y
 CONFIG_64BIT=y
@@ -1784,6 +1784,7 @@ CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_I2C_FORCE=y
 # CONFIG_TOUCHSCREEN_SYNAPTICS_DSX_CORE_FORCE is not set
 # CONFIG_TOUCH_DEBUG_FS is not set
 CONFIG_TOUCHSCREEN_FTS=y
+# CONFIG_TOUCHSCREEN_FTS_POWER_SUPPLY is not set
 CONFIG_TOUCHSCREEN_FTS_DIRECTORY="focaltech_touch"
 # CONFIG_TOUCHSCREEN_FT5X46 is not set
 # CONFIG_TOUCHSCREEN_FT5X46_I2C is not set
@@ -1795,6 +1796,8 @@ CONFIG_TOUCHSCREEN_FTS_DIRECTORY="focaltech_touch"
 # CONFIG_TOUCHSCREEN_EKTF3XXX_CHIPSET is not set
 # CONFIG_TOUCHSCREEN_RAYDIUM_CHIPSET is not set
 # CONFIG_INPUT_PRESS_NDT is not set
+# CONFIG_SECURE_TOUCH is not set
+# CONFIG_I2C_BY_DMA is not set
 CONFIG_INPUT_MISC=y
 # CONFIG_INPUT_AD714X is not set
 # CONFIG_INPUT_ATMEL_CAPTOUCH is not set
@@ -2200,6 +2203,7 @@ CONFIG_POWER_SUPPLY=y
 # CONFIG_CHARGER_BQ25890 is not set
 # CONFIG_CHARGER_SMB347 is not set
 # CONFIG_BATTERY_GAUGE_LTC2941 is not set
+# CONFIG_BATTERY_RT5033 is not set
 # CONFIG_CHARGER_RT9455 is not set
 # CONFIG_NX30P6093 is not set
 
